--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
 {deps, [
-{hackney,"1.15.1"},{jsx,"2.9.0"},{erlsom,"1.5.0"},{mochiweb_util,"0.1.0"}
-]}.
+{hackney,"1.15.1"},{jsx,"2.9.0"},{erlsom,"1.5.0"},{mochiweb, "",
+   {git, "git://github.com/mochi/mochiweb.git", {branch, "master"}}}]}.
 {erl_opts, [debug_info,warn_export_vars,warn_shadow_vars,warn_obsolete_guard]}.
